[package]
authors = ["Wagner Barongello <wagner@barongello.com.br>"]
edition = "2021"
name = "rp2040-st7789-1"
readme = "README.md"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
defmt = "0.3.2"
defmt-rtt = "0.4.0"
embedded-hal = "0.2.7"
embedded-time = "0.12.1"
fugit = "0.3.6"
heapless = "0.7.16"
panic-halt = "0.2.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
rp-pico = "0.6.0"
rp2040-boot2 = "0.2.1"
rp2040-hal = { version = "0.7.0", features = ["rt"] }

[[bin]]
name = "rp2040-st7789-1"
test = false
bench = false

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
overflow-checks = false
panic = 'abort'
lto = true
opt-level = "z"
incremental = false
strip = true
